ajout de possiblité de pouvoir deviner ça varieté en fonction de ces voisins